# Playbook

./: .gitignore  AGENT_ARCHITECTURE.md  AGENT_ARCHITECTURE_SIMPLE.md  README.md
backend/: .env.example  pyproject.toml
backend/app/: main.py
backend/app/api/routes/: __init__.py  ai_edits.py  chat.py  project_sops.py  projects.py  sops.py
backend/app/core/: config.py
backend/app/db/: session.py
backend/app/db/models/: __init__.py  project.py  project_sop.py  sop.py
backend/app/schemas/: ai_edit.py  chat.py  project.py  project_sop.py  sop.py
backend/app/services/: __init__.py  ai_edit_service.py  chat_service.py  llm_provider.py  project_service.py  project_sop_service.py  sop_service.py
backend/db/: add_chat_type_migration.sql  add_display_order_migration.sql  complete-project-management-migration.sql  postgresql-sample-data.sql  schema.sql
backend/db/proposed-draft-migrations/: complete-project-management-migration-sqlite.sql  postgresql-to-sqlite-adjustment.sql  postgresql-uuid-fix.sql  sample-project-data-sqlite.sql  sample-project-data.sql
frontend/: package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/components/: AIEditDiffViewer.module.css  AIEditDiffViewer.tsx  AIEditModal.module.css  AIEditModal.tsx  AddProjectModal.module.css  AddProjectModal.tsx  AddProjectSOPModal.module.css  AddProjectSOPModal.tsx  AddSOPModal.module.css  AddSOPModal.tsx  AppHeader.module.css  AppHeader.tsx  (+17 more)
frontend/src/lib/: api.ts  utils.ts
frontend/src/types/: index.ts
(+3 files in other folders)
