[tool.poetry]
name = "pmo-playbook-backend"
version = "0.1.0"
description = "FastAPI backend for SOP management and AI chat"
authors = ["Your Name <you@example.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
SQLAlchemy = "^2.0.29"
psycopg = {extras = ["binary"], version = "^3.1.18"}
pydantic-settings = "^2.2.1"
python-dotenv = "^1.0.1"
openai = "^1.14.0"

[tool.poetry.dev-dependencies]
ruff = "^0.3.4"
pytest = "^8.1.1"
httpx = "^0.27.0"
pytest-asyncio = "^0.23.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
